# bzmedia

./: .gitignore  build.gradle  config.gradle  gradle.properties  readme.md  settings.gradle
app/: build.gradle  proguard-rules.pro
app/libs/: effect-1.0.4-release.aar
app/src/androidTest/java/bz/luoye/sample/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: SoundEffect.json
app/src/main/java/bz/luoye/sample/: BZApplication.java
app/src/main/java/bz/luoye/sample/activity/: APITestActivity.java  AdjustVideoSpeedActivity.java  AudioFeatureActivity.java  AudioPlayerActivity.java  BZNativeVideoViewActivity.java  EffectsActivity.java  FullVideoScreenActivity.java  GetImageFromVideoActivity.java  ImageFilterDemoActivity.java  MainActivity.java  MultipleImageEffectActivity.java  MultipleImageFilterActivity.java  OtherTestActivity.java  PathMeasureDemoActivity.java  Recoder4BitmapActivity.java  (+13 more)
app/src/main/res/drawable/: selector_back_bg.xml  selector_forward_bg.xml
app/src/main/res/layout/: activity_adjust_video_speed.xml  activity_api_test.xml  activity_apitest2.xml  activity_audio_feature.xml  activity_audio_player.xml  activity_b_z_native_video_view.xml  activity_camera_mark.xml  activity_choose_sound_effect.xml  activity_crop_demo.xml  activity_effects.xml  activity_filter_adjust.xml  activity_full_video_screen.xml  activity_get_image_from_video.xml  activity_image_filter_demo.xml  activity_main.xml  activity_main_task1.xml  activity_multiple_image_effect.xml  activity_multiple_image_filter.xml  activity_new_video_mark.xml  activity_other_test.xml  activity_path_measure_demo.xml  activity_recoder4_bitmap.xml  activity_recoder4_camera1.xml  activity_recoder4_camera2.xml  activity_recoder4_texture.xml  activity_recorder_test.xml  activity_scale_adjustment.xml  activity_sound_touch_demo.xml  activity_video_filter.xml  activity_video_mark.xml  activity_video_player.xml  activity_view_demo.xml  activity_whole_process_demo.xml  fragment_theme_editor.xml  layout_choose_audio_effect.xml  layout_choose_mosaic_type.xml  layout_filter_adjust.xml  layout_save_video_dialog.xml
app/src/main/res/values/: array.xml  strings.xml  styles.xml
app/src/test/java/bz/luoye/sample/: ExampleUnitTest.java
bzmedialib/: build.gradle
bzmedialib/src/androidTest/java/bz/luoye/bzmedia/: ExampleInstrumentedTest.java
bzmedialib/src/main/: AndroidManifest.xml
bzmedialib/src/main/cpp/: CMakeLists.txt
bzmedialib/src/main/cpp/bean/: AdjustEffectConfig.h  BZColor.h  BZScaleType.h  BgFillType.h  FilteringContext.h  PcmData.h  PixelFormat.h  TextureHandleInfo.h  TextureInfo.h
bzmedialib/src/main/cpp/common/: BZLogUtil.cpp  CallbackMethodIDInfo.h  GLUtil.cpp  GLUtil.h  JMethodInfo.h  JvmManager.cpp  JvmManager.h  PngReader.cpp  PngReader.h  VideoTimeStampInfo.h  bz_time.cpp  bz_time.h  bzcommon.h  bzgl.h  ffmpeg_cmd.h
bzmedialib/src/main/cpp/glprogram/: AVFrameDrawProgram.cpp  AVFrameDrawProgram.h  AdjustProgram.cpp  AdjustProgram.h  BaseMatrixProgram.cpp  BaseMatrixProgram.h  BaseParticleProgram.cpp  BaseParticleProgram.h  BaseProgram.cpp  BaseProgram.h  BaseYUVDrawProgram.cpp  BaseYUVDrawProgram.h  CircleProgram.cpp  CircleProgram.h  GaussBlurProgram.cpp  GaussBlurProgram.h  ImageExternalProgram.cpp  ImageExternalProgram.h  MosaicProgram.cpp  MosaicProgram.h  TextureYUVProgram.cpp  TextureYUVProgram.h  YUV420DrawProgram.cpp  YUV420DrawProgram.h  YUVNVDrawProgram.cpp  YUVNVDrawProgram.h  ZoomProgram.cpp  ZoomProgram.h
bzmedialib/src/main/cpp/glutils/: BZRenderEngine.cpp  BZRenderEngine.h  CropTextureUtil.cpp  CropTextureUtil.h  EGLContextUtil.cpp  EGLContextUtil.h  FrameBufferUtils.cpp  FrameBufferUtils.h  GLImageTextureUtil.cpp  GLImageTextureUtil.h  GLMatrixUtils.cpp  GLMatrixUtils.h  ImageTextureInfo.h  MatrixVaryTools.cpp  MatrixVaryTools.h  TextureConvertYUVUtil.cpp  TextureConvertYUVUtil.h  TextureUtil.cpp  TextureUtil.h  VideoTextureManger.cpp  VideoTextureManger.h
bzmedialib/src/main/cpp/include/libavcodec/: mathops.h
bzmedialib/src/main/cpp/include/libavutil/: internal.h  parseutils.h
bzmedialib/src/main/cpp/include/soundtouch/: STTypes.h  SoundTouch.h
bzmedialib/src/main/cpp/jni/: OnActionListener.cpp  OnActionListener.h  android_bzmedia.cpp  android_external_texture_program.cpp  android_gl_program.cpp  ffmpeg_audio_player.cpp  ffmpeg_base_info.cpp  ffmpeg_base_info.h  ffmpeg_cmd.h  jni_BZRenderEngine.cpp  jni_VideoFrameGetter.cpp  soundtouch_jni.cpp  video_edit_sdk.cpp  video_player_jni.cpp  video_recorder_jni.cpp
bzmedialib/src/main/cpp/mediaedit/: AdjustVideoSpeedUtil.cpp  AdjustVideoSpeedUtil.h  AudioFeatureInfoUtil.cpp  AudioFeatureInfoUtil.h  AudioTransCode.cpp  AudioTransCode.h  BackgroundMusicUtil.cpp  BackgroundMusicUtil.h  ClipVideoFrameToImage.cpp  ClipVideoFrameToImage.h  GetVideoFrameUtil.cpp  GetVideoFrameUtil.h  MergeVideoAndAudio.cpp  MergeVideoAndAudio.h  MergeVideoUtil.cpp  MergeVideoUtil.h  TextureConvertYUVUtil.cpp  TextureConvertYUVUtil.h  TextureUtil.cpp  TextureUtil.h  VideoFrameGetter.cpp  VideoFrameGetter.h  VideoTransCode.cpp  VideoTransCode.h  VideoTranscodeParams.h  VideoUtil.cpp  VideoUtil.h
bzmedialib/src/main/cpp/permission/: PermissionUtil.cpp  PermissionUtil.h  base64.c  base64.h  includes.h
bzmedialib/src/main/cpp/player/: AVFrameDeque.cpp  AVFrameDeque.h  AVPacketDeque.cpp  AVPacketDeque.h  AudioPlayer.cpp  AudioPlayer.h  PCMPlayerNative.cpp  PCMPlayerNative.h  VideoPlayer.cpp  VideoPlayer.h  VideoPlayerInitParams.h  VideoPlayerMethodInfo.h  opensl_io.c  opensl_io.h
bzmedialib/src/main/cpp/recorder/: OutputStream.h  VideoRecordParams.h  VideoRecorder.cpp  VideoRecorder.h
bzmedialib/src/main/cpp/soundtouch/: SoundTouch.cpp
bzmedialib/src/main/cpp/utils/: AdjustConfigUtil.cpp  AdjustConfigUtil.h  PcmDeque.cpp  PcmDeque.h
bzmedialib/src/main/java/bz/luoye/bzmedia/: BZMedia.java
bzmedialib/src/main/java/com/luoye/bzmedia/: BZMedia.java
bzmedialib/src/main/res/values/: attrs.xml
bzmedialib/src/test/java/bz/luoye/bzmedia/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+72 files in other folders)
